Fixed latest message overlapping MyChats component

--- a/client/src/styles/ChatPage/MyChats.module.css
+++ b/client/src/styles/ChatPage/MyChats.module.css
@@ -120,6 +120,9 @@
 .chat_info_container {
 	display: flex;
 	flex-direction: column;
+	width: 80%;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .chat_sender_username,
@@ -139,6 +142,7 @@
 	font-family: "Montserrat";
 	font-size: 11px;
 	font-weight: 400;
+	white-space: nowrap;
 }
 
 .chat_pic {
